# create_fast_app

./: .gitignore  README.md  pyproject.toml  requirements.txt
create_fast_app/: cli.py  utils.py
create_fast_app/templates/microservice/: Dockerfile
create_fast_app/templates/microservice/src/: app.py
create_fast_app/templates/monolith/: Dockerfile
create_fast_app/templates/monolith/requirements/: base.txt
create_fast_app/templates/monolith/src/: main.py
create_fast_app/templates/monolith/src/package1/: router.py
tests/: test_create_fast_app.py
