[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ['create_fast_app', 'create_fast_app.templates']

[project]
name = "create-fast-app"
version = "0.0.1"
authors = [
  { name="Nedu Ekeruche", email="cekeruche@icloud.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
repository = "https://github.com/Chinedu-E/create-fast-app"

[project.scripts]
create_fast_app = 'create_fast_app.cli:create_fastapi_app'